[package]
name = "arch-into"
version = "0.0.1-alpha.5"
edition = "2021"
description = "safe type conversions between pointer-sized types (usize/isize) and types with fixed size"
keywords = ["conversions", "architecture", "pointer"]
categories = ["rust-patterns"]
repository = "https://github.com/glebpom/arch-into"
documentation = "https://docs.rs/arch-into"
authors = ["Gleb Pomykalov <glebpom@gmail.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
autotests = true

[dependencies]
paste = "1"
const_panic = "0.2"

[features]
default = []
no-arch-64 = []
no-arch-32 = []
